@@ -1,4 +1,5 @@
 
+  - Added support for console groups
   - Added support for message labels when using the wildfire protocol
   - Added resizing links to variable viewer overlay and persist last size in preferences
   - (Issue 11) Variable inspection for arrays logged to console
